@@ -1,6 +1,7 @@
 package net.silentchaos512.gear.command;
 
 import com.google.common.collect.ImmutableList;
+import mcp.MethodsReturnNonnullByDefault;
 import net.minecraft.command.CommandBase;
 import net.minecraft.command.ICommandSender;
 import net.minecraft.entity.player.EntityPlayer;
@@ -16,13 +17,15 @@ import net.silentchaos512.gear.client.util.GearClientHelper;
 import net.silentchaos512.gear.util.GearData;
 
 import javax.annotation.Nullable;
+import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.List;
 import java.util.Locale;
 
+@ParametersAreNonnullByDefault
+@MethodsReturnNonnullByDefault
 public class CommandSilentGear extends CommandBase {
-
     enum SubCommand {
-        RESET_MODEL_CACHES, REGISTRY_ANALYZE, BREAK_ITEM_IN_HAND, REPAIR_ITEM_IN_HAND;
+        RESET_MODEL_CACHES, REGISTRY_ANALYZE, BREAK_ITEM_IN_HAND, REPAIR_ITEM_IN_HAND, LOCK_STATS;
 
         @Nullable
         static SubCommand fromArgs(String arg) {
@@ -61,7 +64,6 @@ public class CommandSilentGear extends CommandBase {
 
     @Override
     public void execute(MinecraftServer server, ICommandSender sender, String[] args) {
-
         if (args.length < 1) {
             tell(sender, getUsage(sender), false);
             return;
@@ -69,6 +71,7 @@ public class CommandSilentGear extends CommandBase {
 
         SubCommand subCommand = SubCommand.fromArgs(args[0]);
         if (subCommand == SubCommand.RESET_MODEL_CACHES) {
+            // FIXME: Does not work on server?
             int total = GearClientHelper.modelCache.size();
             GearClientHelper.modelCache.clear();
             tell(sender, "Reset gear model caches, removed " + total + " objects", false);
@@ -94,6 +97,17 @@ public class CommandSilentGear extends CommandBase {
                 GearData.recalculateStats(stack);
                 tell(sender, "┬─┬ノ( º _ ºノ)", false);
             }
+        } else if (subCommand == SubCommand.LOCK_STATS && sender instanceof EntityPlayer) {
+            EntityPlayer player = (EntityPlayer) sender;
+            ItemStack stack = player.getHeldItemMainhand();
+            if (stack.getItem() instanceof ICoreItem) {
+                final boolean current = GearData.hasLockedStats(stack);
+                GearData.setLockedStats(stack, !current);
+                tell(sender, "lock_stats.success", true, stack.getDisplayName(),
+                        (current ? TextFormatting.GREEN + "unlocked" : TextFormatting.RED + "locked"));
+            } else {
+                tell(sender, "invalid_item_type", true, stack.getDisplayName());
+            }
         }
     }
 
@@ -105,21 +119,13 @@ public class CommandSilentGear extends CommandBase {
             return ImmutableList.of();
     }
 
-    @Override
-    public boolean isUsernameIndex(String[] args, int index) {
-
-        return args.length > 2 && args[1].equals("get") ? index == 3 : index == 4;
-    }
-
     private void tell(ICommandSender sender, String key, boolean fromLocalizationFile, Object... args) {
-
         tell(sender, TextFormatting.RESET, key, fromLocalizationFile, args);
     }
 
     private void tell(ICommandSender sender, TextFormatting format, String key, boolean fromLocalizationFile, Object... args) {
-
         String value = fromLocalizationFile
-                ? SilentGear.i18n.translate("command." + key, args)
+                ? SilentGear.i18n.translate("command", key, args)
                 : key;
         sender.sendMessage(new TextComponentString(format + value));
     }
