@@ -286,6 +286,13 @@ part.silentgear.type.tip=Tip Upgrade
 
 
 
+# Commands
+
+command.silentgear.invalid_item_type=Item in main hand (%s) does not seem to be a Silent Gear tool/armor item
+command.silentgear.lock_stats.success=Stats on §e%s§r are now %s§r (assuming item is valid)
+
+
+
 # JEI
 
 jei.silentgear.blueprint.desc=Blueprints and templates are used to craft tool heads and armor. Blueprints can be reused infinitely, templates are single-use. When used in the crafting station, you can mix materials. Otherwise, the materials must all be the same. Check the tooltip of the blueprint/template for details on crafting the final item.
