@@ -1,5 +1,7 @@
 0.2.0
-Switched gear part registry to a Forge registry. Shouldn't have any affect on how things work right now, but watch out for anything unusual.
+Switched gear part registry to a Forge registry. Shouldn't have any affect on how things work right now (maybe a small performance boost), but watch out for anything unusual.
+Added: Added lock stats command (/sgear lock_stats), so gear stats can be locked without an NBT editor (mainly for map/pack makers)
+Added: Tooltips for gear with invalid/missing parts and gear with locked stats
 
 0.1.3
 Added: Configs to change repair multiplier for quick and anvil repairs
